[gd_scene load_steps=8 format=2]

[ext_resource path="res://objetos/carta.gd" type="Script" id=1]
[ext_resource path="res://_assets/cartas/militar/1.png" type="Texture" id=2]

[sub_resource type="StreamTexture" id=2]
flags = 4
load_path = "res://.import/back.png-99ae23b73a0b8167f30a960579af9509.stex"

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.2, 0.2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("frente:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("verso:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
resource_name = "esconde"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.2, 0.2 ), Vector2( 0.005, 0.2 ), Vector2( 0.2, 0.2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("frente:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("verso:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=5]
resource_name = "revela"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.2, 0.2 ), Vector2( 0.005, 0.2 ), Vector2( 0.2, 0.2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("frente:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("verso:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 217.5, 327.5 )

[node name="carta" type="Node2D"]
scale = Vector2( 0.2, 0.2 )
script = ExtResource( 1 )

[node name="frente" type="Sprite" parent="."]
position = Vector2( -4, 0 )
texture = ExtResource( 2 )

[node name="verso" type="Sprite" parent="."]
visible = false
position = Vector2( -5.00002, -2.21729e-05 )
scale = Vector2( 1.25668, 1.38554 )
texture = SubResource( 2 )

[node name="anima" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/esconde = SubResource( 4 )
anims/revela = SubResource( 5 )

[node name="pick" type="Area2D" parent="."]

[node name="colisao" type="CollisionShape2D" parent="pick"]
position = Vector2( -2.49999, -2.50003 )
scale = Vector2( 1, 1 )
shape = SubResource( 6 )

[node name="detalhes" type="Timer" parent="."]

[connection signal="mouse_entered" from="pick" to="." method="_on_pick_mouse_entered"]
[connection signal="mouse_exited" from="pick" to="." method="_on_pick_mouse_exited"]
[connection signal="timeout" from="detalhes" to="." method="_on_detalhes_timeout"]
